--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,6 +23,7 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:22.2.1'
     compile 'com.jakewharton:butterknife:6.1.0'
+    compile 'com.android.support:design:22.2.1'
 
     // Robolectric
     testCompile 'junit:junit:4.12'
